    - I'm currently puzzling over how to modify spaceship fuel thrust ratio values and integrity checks for containers and the like. Poking around the code I did notice there's a 90% savings for using locomotives and cargo wagons (not fluid wagons tho) for calculating integrity. Neat bonus that I don't see talked about a lot.
---------------------------------------------------------------------------------------------------
Version: 1.0.17
Date: 2023.10.15
  Features:
    - Added Fluid Wagon to requirements for 5Dim Train tier unlocks
    - Removed superfluous Tier 1 5Dim fusion reactor equipment tech research since it's included in the grouped tech unlock now.
    - Removed superfluous Tier 1 & 2 5Dim energy shield equipment tech for same reason.
    - Added Oil Based Paint mod for wider color ranges.
    - Begin tweaking Spidertron Tiers - Community Updates graphics. I don't really appreciate the changes made to the original spidertron graphics so I'm restoring the original graphics with maybe some of the graphics from Spidertron Extended for different colored eyes then using Oil-Based Paints wider color gamut to apply initial tints to the Spidertrons added from Spidertron Tiers - Community updates mod. I've currently swapped out the graphics the mod uses for the base game spidertron and lifted some of the tinting-on-placement code from Spidertron Extended to tint the colors of Tiers spidertrons to kind of match their icons (which are still being used).
    - Added a Burner Productivity Module for the very early game so there's less need to bust out the infinity chest for speeding up early game production.
    - Added Oil_Based_Paint mod as a dependency.
---------------------------------------------------------------------------------------------------
Version: 1.0.16
Date: 2023.10.14
  Major Features:
    - I figured out how changelogs worked!
  Features: