@@ -66,6 +66,8 @@
     "CreativeItems",
     "filter_assistant",
     "FilterChests",
+    "helmod",
+    "Kux-ProductionRates",
     "mining-patch-planner",
     "ModuleInserterER",
     "Oil_Based_Paint",
